# seam-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: groupchat_failure_modes.py  two_agent_demo.py
seam_eval/: __init__.py  taxonomy.py
seam_eval/adapters/: __init__.py  autogen.py
seam_eval/benchmarks/: __init__.py  seam_benchmark.py
seam_eval/callbacks/: __init__.py  seam_trace.py
seam_eval/evaluators/: __init__.py  handoff_evaluator.py
tests/: test_handoff_evaluator.py  test_seam_trace_callback.py  test_taxonomy.py
